    Quoting the OP will not insert the >>opnumber anymore unless the QR was already opened.
  Image Expansion changes:
    Expanding OP images won't squish replies anymore.
    There is now a setting to allow expanding spoilers.
  Added touch and multi-touch support for dragging windows.
  The Thread Updater will pause when offline, and resume when online.
  Thread Stats post and file count will adjust with deleted posts.
  Added Thread & Post Hiding in the Menu, with individual settings.
  Thread & Post Hiding Buttons can now be disabled in the settings.
  Recursive Hiding will be automatically applied when manually hiding a post.
  Visible posts will not be taken into account towards the unread count.
  Added [math] tags keybind.
  Fix Chrome's install warning saying that 4chan X would execute on all domains.
  Fix Quote Backlinks not affecting inlined quotes.
  Fix Quote Highlighting not affecting inlined quotes.
  Fix unreadable inlined posts with the Tomorrow theme.
  Fix user ID highlighting on fetched posts.

master

2.38.1
- Mayhem
  Fix a little regression introduced in 2.38.0 for webkit browsers.

2.38.0
- Queue
  Add Relative Post Dates ("35 seconds ago"), disabled by default.
- Mayhem
  Add /int/ archive redirection for threads, and post resurrection.

2.37.6
- Mayhem
  Fix image expanding.

2.37.5
- Mayhem
  Fix quoting inside inlined backlinks.

2.37.4
- James Campos
  Don't expand pdfs
- Mayhem
  Add /po/ archive redirection for threads, images and post resurrection.
  Fix quoting.

2.37.3
- Mayhem
  Fix successful posting causing errors.
  Fix 4chan X trying to interact with >>>/board/rules links.

2.37.2
- aeosynth
  Beep on new post to completely read thread
- Mayhem
  Fix dead quotes.

2.37.1
- noface
  Fix Anonymize not working on stubs.
- Mayhem
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
  Fix posting warning not displaying the reason.
  Fix deadquotes showing up in code-tags.

2.37.0
- noface