@@ -170,6 +170,7 @@
       checkbox: {
         'Beep': [false, 'Beep on new post to completely read thread.'],
         'Auto Scroll': [false, 'Scroll updated posts into view. Only enabled at bottom of page.'],
+        'Bottom scroll': [false, 'Always scroll to the bottom, not the first new post. Useful for event threads.'],
         'Scroll BG': [false, 'Auto-scroll background tabs.'],
         'Auto Update': [true, 'Automatically fetch new posts.']
       },
@@ -5224,7 +5225,11 @@
         scroll = Conf['Auto Scroll'] && ThreadUpdater.scrollBG() && ThreadUpdater.root.getBoundingClientRect().bottom - doc.clientHeight < 25;
         $.add(ThreadUpdater.root, nodes);
         if (scroll) {
-          nodes[0].scrollIntoView();
+          if (Conf['Bottom scroll']) {
+            d.body.scrollTop = d.body.clientHeight;
+          } else {
+            nodes[0].scrollIntoView();
+          }
         }
         $.queueTask(function() {
           var length, threadID;
